GNOME Bugzilla – Bug 768623
udpsrc: There is no struct in_pktinfo on FreeBSD
Last modified: 2016-07-11 06:19:50 UTC
Error found when compiling gst/udp/gstudpsrc.c: CC libgstudp_la-gstudpsrc.lo gstudpsrc.c:288:14: error: invalid application of 'sizeof' to an incomplete type 'struct in_pktinfo' if (size < sizeof (struct in_pktinfo)) ^ ~~~~~~~~~~~~~~~~~~~ gstudpsrc.c:288:29: note: forward declaration of 'struct in_pktinfo' if (size < sizeof (struct in_pktinfo)) ^
commit ccdd76fd1882b7ede3e9e9143365e061a850b4b7 Author: Sebastian Dröge <sebastian@centricular.com> Date: Sun Jul 10 21:30:27 2016 +0300 udpsrc: Use correct in6_pktinfo struct instead of in_pktinfo Fixes the build on FreeBSD, which does not have the latter. https://bugzilla.gnome.org/show_bug.cgi?id=768623