udpsrc: Use correct in6_pktinfo struct instead of in_pktinfo

Fixes the build on FreeBSD, which does not have the latter.

https://bugzilla.gnome.org/show_bug.cgi?id=768623